--- a/rest/templates/recharge.html
+++ b/rest/templates/recharge.html
@@ -18,7 +18,7 @@
 
 
 <h1 align="center" style="margin-top:1%">
- Recharge Your Mobile Here ! Fill All The Details
+ Recharge Your Mobile Here ! Fill All The Fields
 </h1>
 
 
